--- a/src/Dotnet9.Tools.Web/Shared/Public/PublicLayout.razor
+++ b/src/Dotnet9.Tools.Web/Shared/Public/PublicLayout.razor
@@ -1,57 +1,37 @@
-﻿@using BlazorComponent.I18n
-@inherits LayoutComponentBase
+﻿@inherits LayoutComponentBase
 
-<CascadingValue Value="this">
-    <CascadingValue Value="@IsChinese" Name="Lang">
-        <MApp Class="baselayout-m-app">
+<MApp Class="baselayout-m-app">
 
-            <MAppBar ElevateOnScroll Color="white" Height="80" Elevation="0" ClippedLeft ClippedRight App>
-                @*<MAppBarNavIcon @onclick="() => _drawer = !_drawer"/>*@
-                <PublicHeader IsChinese="@IsChinese"/>
-            </MAppBar>
+    <MAppBar ElevateOnScroll Color="white" Height="80" Elevation="0" ClippedLeft ClippedRight App>
+        @*<MAppBarNavIcon @onclick="() => _drawer = !_drawer"/>*@
+        <PublicHeader/>
+    </MAppBar>
 
-            @*<MSystemBar Dark Color="primary" Height="30" Class="d-none d-sm-none d-md-flex m-0 p-0" App>
+    @*<MSystemBar Dark Color="primary" Height="30" Class="d-none d-sm-none d-md-flex m-0 p-0" App>
                 <MSpacer></MSpacer>
                 <MIcon>mdi-message</MIcon>
-                <span style="color: white;">@T("Dotnet9ToolsDescription")</span>
+                <span style="color: white;">免费开源在线工具，方便自己，方便他人</span>
             </MSystemBar>*@
 
-            <MNavigationDrawer @bind-Value="_drawer" Floating Fixed Width="333" App Clipped>
-                <ChildContent>
-                    <PublicCategorySidebar/>
-                    <div class="pt-12"></div>
-                </ChildContent>
-            </MNavigationDrawer>
+    <MNavigationDrawer @bind-Value="_drawer" Floating Fixed Width="333" App Clipped>
+        <ChildContent>
+            <PublicCategorySidebar/>
+            <div class="pt-12"></div>
+        </ChildContent>
+    </MNavigationDrawer>
 
-            <MMain Class="mainlayout-m-main">
-                @Body
-            </MMain>
+    <MMain Class="mainlayout-m-main">
+        @Body
+    </MMain>
 
 
-            <MFooter Color="primary lighten-1" Padless>
-                <PublicFooter/>
-            </MFooter>
+    <MFooter Color="primary lighten-1" Padless>
+        <PublicFooter/>
+    </MFooter>
 
-        </MApp>
-    </CascadingValue>
-</CascadingValue>
+</MApp>
 
 @code
 {
     private bool _drawer = true;
-    public bool IsChinese { get; set; }
-
-    [Inject]
-    public I18n? I18N { get; set; }
-
-    public async Task ChangeLanguage(string lang)
-    {
-        I18N?.SetLang(lang);
-        await Task.CompletedTask;
-    }
-
-    public string T(string key)
-    {
-        return I18N?.LanguageMap.GetValueOrDefault(key) ?? string.Empty;
-    }
 }
