--- a/src/Dotnet9.Tools.Web/Pages/Public/Blogs/Category.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Blogs/Category.razor
@@ -1,12 +1,12 @@
 ﻿@page "/cat/{slug?}"
 @using Dotnet9.Tools.Web.Utils
-@using Dotnet9.Tools.Web.Shared.Public
 @using Dotnet9.Tools.Web.Models
+@using Dotnet9.Tools.Web.Shared.Public
 @layout DocLayout
 
-<PageTitle>@T("Category") - @T("Dotnet9ToolsTitle")</PageTitle>
+<PageTitle>分类 - D9工具箱</PageTitle>
 
-<h1 class="entry-title">@T("Category") @(string.IsNullOrWhiteSpace(_categoryName) ? "" : $":{_categoryName}")</h1>
+<h1 class="entry-title">分类 @(string.IsNullOrWhiteSpace(_categoryName) ? "" : $":{_categoryName}")</h1>
 
 @if (_items is not {Count: > 0 })
 {
@@ -22,24 +22,16 @@ else
     [Parameter]
     public string? Slug { get; set; }
 
-    [CascadingParameter]
-    public PublicLayout? MainLayout { get; set; }
-
     List<CardItem>? _items;
 
     private string? _categoryName;
-
-    public string T(string key)
-    {
-        return MainLayout?.T(key) ?? string.Empty;
-    }
 
     protected override async Task OnParametersSetAsync()
     {
         _items?.Clear();
         if (string.IsNullOrWhiteSpace(Slug))
         {
-            _items = ConstData.CategoryNotTreeItems!.Select(x => new CardItem(secondTitle: x.Name, secondUrl: x.Slug.GetCategoryUrl(), author: T("SiteOwner"))).ToList();
+            _items = ConstData.CategoryNotTreeItems!.Select(x => new CardItem(secondTitle: x.Name, secondUrl: x.Slug.GetCategoryUrl(), author: "沙漠尽头的狼")).ToList();
             return;
         }
         var category = ConstData.CategoryNotTreeItems!.FirstOrDefault(x => x.Slug == Slug);
