--- a/src/Dotnet9.Tools.Web/Pages/Public/Index.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Index.razor
@@ -1,20 +1,20 @@
 ﻿@page "/"
-@using Dotnet9.Tools.Web.Shared.Public
 @using BlazorComponent
+@using Dotnet9.Tools.Web.Shared.Public
 @layout PublicLayout
 
-<PageTitle>@T("Home") - @T("Dotnet9ToolsTitle")</PageTitle>
+<PageTitle>首页 - D9工具箱</PageTitle>
 
 <MRow Class="banner" NoGutters Align="AlignTypes.Center" Justify="JustifyTypes.Center">
     <MCol Align="@AlignTypes.Center" Lg="6" Md="6" Sm="12">
         <div class="banner-logo-box">
             <p class="banner-logo-font">
-                @T("Dotnet9ToolsTitle")
+                D9工具箱
             </p>
         </div>
         <div class="banner-detail-box">
             <p class="banner-detail-font">
-                @T("Dotnet9ToolsDescription")
+                免费开源在线工具，方便自己，方便他人
             </p>
         </div>
         <MRow NoGutters Style="margin-top: 88px;" Justify="JustifyTypes.Start">
@@ -23,7 +23,7 @@
                      Height="64"
                      Class="text-20 mb-6 px-6"
                      Href="/tools">
-                @T("GetStarted")
+                开始使用吧
             </MButton>
             <MButton Dark
                      Outlined
@@ -31,7 +31,7 @@
                      Height="64"
                      Class="text-20 px-6 mb-6 mx-6"
                      Href="/cat">
-                @T("GoToBlog")
+                浏览博客
             </MButton>
             <MButton Dark
                      Color="black"
@@ -50,9 +50,6 @@
 {
     private int _onboarding;
 
-    [CascadingParameter]
-    public PublicLayout MainLayout { get; set; } = default!;
-
     [Inject]
     public IJSRuntime JSRuntime { get; set; } = default!;
 
@@ -68,11 +65,5 @@
     private async Task Toggle(string url)
     {
         if (!string.IsNullOrWhiteSpace(url)) await JSRuntime.InvokeVoidAsync("window.open", url);
-    }
-
-    public string? T(string key)
-    {
-        var content = MainLayout.T(key);
-        return content;
     }
 }
