--- a/src/Dotnet9.Tools.Web/Shared/Public/NotContentFound.razor
+++ b/src/Dotnet9.Tools.Web/Shared/Public/NotContentFound.razor
@@ -2,21 +2,9 @@
 <MContainer Class="text-center fill-height" Style="height: calc(100vh - 58px)">
     <MRow Align="AlignTypes.Center">
         <MCol>
-            <img src="empty.svg" alt="@T("NoContentFound")" style="max-width: 400px;"/>
+            <img src="empty.svg" alt="抱歉，你搜索的内容未找到，请尝试使用其他关键词搜索。" style="max-width: 400px;"/>
 
-            <p style="color: #828282; margin-top: 20px;">@T("NoContentFound")</p>
+            <p style="color: #828282; margin-top: 20px;">抱歉，你搜索的内容未找到，请尝试使用其他关键词搜索。</p>
         </MCol>
     </MRow>
 </MContainer>
-
-@code{
-
-    [CascadingParameter]
-    public PublicLayout? MainLayout { get; set; }
-
-    public string T(string key)
-    {
-        return MainLayout?.T(key) ?? string.Empty;
-    }
-
-}
