--- a/src/Dotnet9.Tools.Web/Shared/Public/PublicHeader.razor
+++ b/src/Dotnet9.Tools.Web/Shared/Public/PublicHeader.razor
@@ -1,18 +1,16 @@
-﻿@using BlazorComponent.I18n
-@using BlazorComponent
-@using System.Globalization
+﻿@using BlazorComponent
 <span @onclick=@(() =>{ Navigation.NavigateTo("/"); SelectTab = 0;})>
     <img style="cursor: pointer; height: 64px; width: 64px;" class="ml-6" src="/logo.png"/>
 </span>
 <div class="menu-container">
     <MMenu Rounded="@_menuRounded" OpenOnHover Class="header-menu" OffsetY Transition="slide-y-transition">
         <ActivatorContent>
-            <MButton Text Class="black--text text-capitalize" XLarge Href="/" @attributes="@context.Attrs">@T("Home")</MButton>
+            <MButton Text Class="black--text text-capitalize" XLarge Href="/" @attributes="@context.Attrs">首页</MButton>
         </ActivatorContent>
     </MMenu>
     <MMenu Rounded="@_menuRounded" Class="header-menu" OffsetY>
         <ActivatorContent>
-            <MButton Text Class="black--text text-capitalize" XLarge @attributes="@context.Attrs">@T("Tools")</MButton>
+            <MButton Text Class="black--text text-capitalize" XLarge @attributes="@context.Attrs">工具</MButton>
         </ActivatorContent>
 
         <ChildContent>
@@ -25,7 +23,7 @@
     </MMenu>
     <MMenu Rounded="@_menuRounded" Class="header-menu" OffsetY>
         <ActivatorContent>
-            <MButton Text Class="black--text text-capitalize" XLarge @attributes="@context.Attrs">@T("Album")</MButton>
+            <MButton Text Class="black--text text-capitalize" XLarge @attributes="@context.Attrs">专辑</MButton>
         </ActivatorContent>
 
         <ChildContent>
@@ -38,7 +36,7 @@
     </MMenu>
     <MMenu Rounded="@_menuRounded" Class="header-menu" OffsetY>
         <ActivatorContent>
-            <MButton Text Class="black--text text-capitalize" XLarge @attributes="@context.Attrs">@T("Blog")</MButton>
+            <MButton Text Class="black--text text-capitalize" XLarge @attributes="@context.Attrs">博客</MButton>
         </ActivatorContent>
 
         <ChildContent>
@@ -49,12 +47,12 @@
     </MMenu>
     <MMenu Rounded="@_menuRounded" Class="header-menu" OffsetY>
         <ActivatorContent>
-            <MButton Text Class="black--text text-capitalize" XLarge Href="/tag" @attributes="@context.Attrs">@T("Tag")</MButton>
+            <MButton Text Class="black--text text-capitalize" XLarge Href="/tag" @attributes="@context.Attrs">标签云</MButton>
         </ActivatorContent>
     </MMenu>
     <MMenu Rounded="@_menuRounded" Class="header-menu" OffsetY>
         <ActivatorContent>
-            <MButton Text Class="black--text text-capitalize" XLarge @attributes="@context.Attrs">@T("About")</MButton>
+            <MButton Text Class="black--text text-capitalize" XLarge @attributes="@context.Attrs">关于</MButton>
         </ActivatorContent>
 
         <ChildContent>
@@ -77,62 +75,14 @@
 <MButton Icon Href="https://gitee.com/dotnet9/dotnet9.com" Target="_blank">
     <img style="height: 24px; width: 24px;" src="https://img1.dotnet9.com/2022/01/gitee.png" alt="Gitee">
 </MButton>
-<MButton Icon OnClick="TurnLanguage" Class="mr-6">
-    <img src="@_languageIcon" alt=""/>
-</MButton>
 
 @code{
-
-    [Parameter]
-    public bool IsChinese { get; set; }
 
     [Inject]
     public NavigationManager Navigation { get; set; } = default!;
 
-    [Inject]
-    public I18nConfig I18NConfig { get; set; } = default!;
-
-    [CascadingParameter]
-    public PublicLayout MainLayout { get; set; } = default!;
-
-    private string? _languageIcon;
     public StringNumber SelectTab { get; set; } = 0;
     private string _menuRounded = "b-xl";
-
-
-    protected override async Task OnInitializedAsync()
-    {
-        var lang = I18NConfig.Language ?? CultureInfo.CurrentCulture.Name;
-
-        IsChinese = lang == "zh-CN";
-
-        await ChangeLanguage(lang);
-    }
-
-
-    private async Task TurnLanguage()
-    {
-        IsChinese = !IsChinese;
-        var lang = IsChinese ? "zh-CN" : "en-US";
-
-        await ChangeLanguage(lang);
-
-        I18NConfig.Language = lang;
-    }
-
-    private async Task ChangeLanguage(string lang)
-    {
-        _languageIcon = $"{lang}.png";
-        await MainLayout.ChangeLanguage(lang);
-
-        await Task.CompletedTask;
-    }
-
-    public string T(string key)
-    {
-        return MainLayout.T(key);
-    }
-
 }
 
 <style>
