--- a/src/Dotnet9.Tools.Web/Pages/_Layout.cshtml
+++ b/src/Dotnet9.Tools.Web/Pages/_Layout.cshtml
@@ -38,7 +38,7 @@
 <body>
 @RenderBody()
 
-@*<div id="blazor-error-ui">
+<div id="blazor-error-ui">
     <environment include="Staging,Production">
         An error has occurred. This application may no longer respond until reloaded.
     </environment>
@@ -47,7 +47,7 @@
     </environment>
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
-</div>*@
+</div>
 <script src="_framework/blazor.server.js"></script>
 <script src="_content/BlazorComponent/js/blazor-component.js"></script>
 <script src="js/site.js"></script>
