--- a/src/Dotnet9.Web/Views/Home/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Home/Index.cshtml
@@ -6,9 +6,9 @@
 <section class="text-center text-sm-start">
     <div class="d-flex">
         <div>
-            <h1>D9<span class="text-warning">工具箱</span></h1>
+            <h1>Dotnet<span class="text-warning">9</span></h1>
             <h3 class="my-4">
-                一个有技术的在线工具箱
+                一个专注.NET的网站，有博文、有免费在线工具
             </h3>
             <button class="btn btn-primary btn-lg">开始使用吧</button>
         </div>
