--- a/src/Dotnet9.Web/Views/Shared/_AdminLayout.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/_AdminLayout.cshtml
@@ -22,7 +22,7 @@
         <!-- LOGO -->
         <a href="/" class="logo text-center logo-light">
             <span class="logo-lg">
-                <img src="~/logo-dark.png" alt="" width="132">
+                <img src="~/logo-head-light.png" alt="" width="132">
             </span>
             <span class="logo-sm">
                 <img src="~/favicon.ico" alt="" width="32">
@@ -32,7 +32,7 @@
         <!-- LOGO -->
         <a href="/" class="logo text-center logo-dark">
             <span class="logo-lg">
-                <img src="~/logo-light.png" alt="" width="132">
+                <img src="~/logo-head-dark.png" alt="" width="132">
             </span>
             <span class="logo-sm">
                 <img src="~/favicon.ico" alt="" width="32">
