--- a/src/Dotnet9.Web/Views/Shared/_PublicLayout.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/_PublicLayout.cshtml
@@ -30,7 +30,7 @@
                     <!-- LOGO -->
                     <a href="/" class="topnav-logo">
                         <span class="topnav-logo-lg">
-                            <img src="~/logo-light.png" alt="" width="132">
+                            <img src="~/logo-head-dark.png" alt="" width="132">
                         </span>
                         <span class="topnav-logo-sm">
                             <img src="~/favicon.ico" alt="" width="32"/>
