--- a/src/Dotnet9.Web/Views/Shared/Error.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Error.cshtml
@@ -3,23 +3,23 @@
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h1 class="text-danger">错误。</h1>
+<h2 class="text-danger">处理您的请求时出错。</h2>
 
 @if (Model.ShowRequestId)
 {
     <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
+        <strong>请求ID:</strong> <code>@Model.RequestId</code>
     </p>
 }
 
 <h3>Development Mode</h3>
 <p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
+    切换 <strong>Development</strong> 环境展示关于错误的详细信息。
 </p>
 <p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
+    <strong>不应为已部署的应用程序启用开发环境。</strong>
+    它可能会导致向最终用户显示异常的敏感信息。
     For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
     and restarting the app.
 </p>
