--- a/src/Dotnet9.Web/Views/Shared/_PublicLayout.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/_PublicLayout.cshtml
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8"/>
-    <title>Dotnet9</title>
+    <title>@ViewData["Title"] - Dotnet9</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="一个专注于.NET技术的网站" name="description"/>
     <meta content="沙漠尽头的狼" name="author"/>
