--- a/src/Dotnet9.Web/Views/BlogPost/Index.cshtml
+++ b/src/Dotnet9.Web/Views/BlogPost/Index.cshtml
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/plugins/toolbar/prism-toolbar.min.css">
     <!--行号插件-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/plugins/line-numbers/prism-line-numbers.min.css">
-
+    <!--图片等自适应-->
+    <link rel="stylesheet" href="~/css/markdown.css">
 }
 
 <h1>@Model.BlogPost.Title</h1>
@@ -37,7 +38,7 @@
     </ul>
     <div class="tab-content">
         <div class="tab-pane show active" id="simplemde-preview">
-            <textarea id="simplemde1">@Html.Raw(Markdown.ToHtml(Model.BlogPost.Content))</textarea>
+            @Html.Raw(Markdown.ToHtml(Model.BlogPost.Content))
         </div> <!-- end preview-->
 
         <div class="tab-pane" id="simplemde-code">
