fix index page;

--- a/src/Dotnet9.Web/Views/Home/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
             </h3>
             <button class="btn btn-primary btn-lg">开始使用吧</button>
         </div>
-        <img src="https://img1.Dotnet9.com/2022/03/0301.gif" alg="Dotnet9" class="w-50 d-none d-md-block"/>
+        <img src="https://img1.dotnet9.com/2022/03/0301.gif" alg="Dotnet9" class="w-50 d-none d-md-block"/>
     </div>
 </section>
 
@@ -29,7 +29,7 @@
                     <div class="card-text">
                         png、jpg、jpeg、tmp等一键转换Icon
                     </div>
-                    <a href="https://lequ.co/ico" class="btn btn-primary mt-2">使用吧</a>
+                    <a href="https://dotnet9.com/ico" class="btn btn-primary mt-2">开发中</a>
                 </div>
             </div>
         </div>
@@ -43,7 +43,7 @@
                     <div class="card-text">
                         在线时间戳转换
                     </div>
-                    <a href="https://lequ.co/timestamp" class="btn btn-dark mt-2">使用吧</a>
+                    <a href="https://dotnet9.com/timestamp" class="btn btn-dark mt-2">开发中</a>
                 </div>
             </div>
         </div>
@@ -57,7 +57,7 @@
                     <div class="card-text">
                         在线正则表达式验证
                     </div>
-                    <a href="#" class="btn btn-primary mt-2">使用吧</a>
+                    <a href="#" class="btn btn-primary mt-2">开发中</a>
                 </div>
             </div>
         </div>
@@ -66,12 +66,12 @@
             <div class="card bg-secondary text-light">
                 <div class="card-body text-center">
                     <div class="card-title text-center">
-                        时间戳转换
+                        更多工具
                     </div>
                     <div class="card-text">
-                        在线时间戳转换
+                        一直在更新
                     </div>
-                    <a href="https://lequ.co/timestamp" class="btn btn-dark mt-2">使用吧</a>
+                    <a href="https://dotnet9.com/timestamp" class="btn btn-dark mt-2">开发中</a>
                 </div>
             </div>
         </div>
@@ -94,7 +94,7 @@
             <p>
                 本文介绍怎么使用Adanced Installer 17.9 制作专业的Windows 客户端安装包，其他软件或者本软件其他版本制作步骤也是类似的。
             </p>
-            <a href="https://lequ.co/post/how-to-make-a-professional-software-installation-package" class="btn btn-light">查看更多</a>
+            <a href="https://dotnet9.com/2021/02/how-to-make-a-professional-software-installation-package" class="btn btn-light">查看更多</a>
         </div>
     </div>
 </section>
@@ -109,7 +109,7 @@
             <p>
                 其实是有的，国内一开源大神提供了一个WPF扩展库，其中就有多语言切换实现。
             </p>
-            <a href="https://lequ.co/post/how-to-realize-multi-language-dynamic-switching-of-wpf" class="btn btn-light">查看更多</a>
+            <a href="https://dotnet9.com/2021/02/how-to-realize-multi-language-dynamic-switching-of-wpf" class="btn btn-light">查看更多</a>
         </div>
         <div class="col-md">
             <img src="https://img1.dotnet9.com/2021/02/0202.gif" alt="wpf-international" class="img-fluid"/>
@@ -147,7 +147,7 @@
                 </button>
             </h2>
             <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                工具开源了，博文Markdown也是MIT协议，本站有理由不开源吗？仓库同工具：<a href="https://github.com/dotnet9/Dotnet9" alt="site-open-source">https://github.com/dotnet9/Dotnet9</a>。
+                工具开源了，博文Markdown也是MIT协议，本站有理由不开源吗？仓库地址：<a href="https://github.com/dotnet9/Dotnet9" alt="site-open-source">https://github.com/dotnet9/Dotnet9</a>。
             </div>
         </div>
     </div>
